--- a/slides.latex
+++ b/slides.latex
@@ -2,8 +2,10 @@
 
 \usepackage{tikz}
 \usepackage{amsmath}
+\usepackage{appendixnumberbeamer}
 
 \usenavigationsymbolstemplate{}
+\setbeamertemplate{footline}[frame number]
 
 \def\mark#1{$^\text{#1}$}
 \def\marktext#1#2{\mark{#1}#2}
@@ -17,174 +19,107 @@ Alberto Griggio\mark{1},
 Stefano Tonetta\mark{1},
 Sergio Mover\mark{3}
 \vfill
-\marktext{1}{FBK} \marktext{2}{CUNI} \marktext{3}{BOULDER}
+\marktext{1}{FBK} \marktext{2}{CUNI} \marktext{3}{CU BOULDER}
 \end{frame}
 
-
-
+\begin{frame}{Introduction}
+\begin{itemize}
+\item currently efficient SAT-based techniques for finite-state
+\item liveness-to-safety (L2S)
+\item k-liveness
+\item well-founded transition invariants for infinite-state
+\item close the gap between these two approaches
+\end{itemize}
+\end{frame}
 
 \def\F{\mathbf{F}}
 \def\G{\mathbf{G}}
-\begin{frame}{Outline}
+\def\bydef{\stackrel{\text{\tiny def}}{=}}
+\begin{frame}{Background}
 \begin{itemize}
-\item standard LTL model checking techniques for finite state
-\item checking an arbitrary LTL reduced to checking $\F\G\neg f$
-\item counterexample infinite path % satisfying $\G\F f$
-\item need to be looping (lasso shape)
-\item no longer true in infinite state case
-\item direct lifting of L2S unsound, k-liveness incomplete
-\item turn infinite state to finite state using abstraction
-\item refute looping abstract counterexamples
-%\begin{itemize}
-%\item refine abstraction
-%\item block infinite abstract paths
-%\end{itemize}
+\item checking arbitrary LTL property reduced to checking $\F\G\neg f$
+\item counterexample infinite path
+\item some such cex needs to loop (lasso shape)
+\item L2S
+\begin{itemize}
+\item tries to guess start of loop
+\item adds copies of state variables
+\item unconstraint, non-det choice
+\item monitors when system enters guessed state, $f$, loopback
+\end{itemize}
+\item k-liveness
+\begin{itemize}
+\item checks that $f$ is satisfied at most $k$ times % for increasing values of $k$
+\item adds $counter$, increment when $f$, check $counter < k$
+\item increment $k$ unless cex loops
+\end{itemize}
+\item both reduce to safety
+\item cex does not have to loop in infinite-state
+\item infinite-state via ranking functions
 \end{itemize}
 \end{frame}
 
-
-
-
-%\begin{frame}{Liveness-to-safety (L2S)}
-%Idea:
-%\begin{itemize}
-%\item every infinite path has to loop
-%\item should $\F\G \neg f$ be violated, $f$ needs to occur in some such loop
-%\item otherwise all paths satisfy $\F\G \neg f$
-%\item therefore, search for loop that contains $f$ (safety property)
-%\item unrolling such loop gives the infinite counterexample
-%\item absence of any such loop proves the property
-%\end{itemize}
-%\end{frame}
-
-
-
-
-\begin{frame}{Liveness-to-safety (L2S)}
-$$
-\def\descsep{\rule{0pt}{1.4em}}
-\langle \underset{\text{\color{green!40!black}\descsep variables}}{X}, \underset{\text{\color{blue!50!black}\descsep initial}}{I}, \underset{\text{\color{orange!50!black}\descsep transition}}{T} \rangle
-$$
-enhanced to
-$$
-    \langle {\color{green!40!black}X_{L2S}}, {\color{blue!50!black}I_{L2S}}, {\color{orange!50!black}T_{L2S}} \rangle
-$$
-where
-
-\begin{minipage}{8cm}
+\begin{frame}{Limitations}
 \begin{itemize}
-\item initially non-det choice of values $\overline{X}$ of ${\color{green!40!black}X}$
-\end{itemize}
-\end{minipage}
-(${\color{blue!50!black}I_{L2S}}$)
-
-\vskip1em
-
-\begin{minipage}{8cm}
+\item infinite state case: L2S not sound, k-liveness incomplete
+\item deriving ranking functions
 \begin{itemize}
-\item remember when ${\color{green!40!black}X} = \overline{X}$ reached $1^{st}$ time
-\item wait for $f$ to occur
-\item close loop when ${\color{green!40!black}X} = \overline{X}$ reached $2^{nd}$ time
+\item costly in general % (in comparison with different smt queries)
+\item how-to for symbol transition systems
+\item technical limitations (depending on domain)
+\begin{itemize}
+\item disjunctions
+\item \ldots
 \end{itemize}
-\end{minipage}
-(${\color{orange!50!black}T_{L2S}}$)
+\end{itemize}
+\end{itemize}
+\end{frame}
 
+\begin{frame}{L2S for infinite state systems}
+\begin{itemize}
+\item in context of symbolic transition systems
+\item for which extracting the ranking functions is not obvious
+\item L2S enables us to extract the ranking functions
+\item L2S adds propositions $\overline{P}$ for fixed abstraction predicates $P$
+\item $\overline{P}$ are unconstraint, represent an abstract state
+\item safety property: $f$ visited in a loop starting in $\overline{P}$
+\item CEGAR: concretize using BMC + refute finite unrolling
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Implicit Abstraction and IC3}
+\begin{itemize}
+\item enabled by SMT
+\item no explicit abstract system
+\item valuating predicates within concrete system avoids explosion
+\item refinement is incremental % (no need to recreate the abstract system)
+\item L2S is parametrised by a safety prover
+\item IC3 efficient SAT-based prover for finite-state
+\item lifting to infinite-state via SMT
+\end{itemize}
+\end{frame}
+
+\begin{frame}{L2Sia with well-founded relations}
+\begin{itemize}
+\item $\Phi$ fixed set of well-founded relations
+\item keep abstract loop detection of L2S
+\item $\overline{X}$ copy of theory variables $X$
+\item non-det store values of $X$ in $\overline{X}$ at some $f$ within loop
+\item at subsequent $f$ check $R(\overline{X}, X)$ for some $R \in \Phi$
+\item safe: disjunctively well-founded transition invariant
+\item here L2S
+\begin{itemize}
+\item provides means to enumerate candidate cex
+\item defers extraction of well-founded relations
+\item mostly cex infeasible due to prefix
+\end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}{Abstract counterexamples}
 \begin{center}
-\end{center}
-\end{frame}
-
-
-
-
-%\begin{frame}{Liveness-to-safety (L2S)}
-%\framesubtitle{Counterexample to $\mathbf{FG}\neg f$}
-%\begin{center}
-%\begin{tikzpicture}[->, >=stealth, every node/.style={circle, draw, minimum size=0.75cm}]
-%\foreach \x in {1, 2, 4, 6}
-%    \node<\x-> (P-\x) at (1.5 * \x,0) {};
-%\foreach \x in {3, 7}
-%    \node<\x->[fill=green!40!black,label={above:${\color{green!40!black}X} = \overline{X}$}] (P-\x) at (1.5 * \x,0) {};
-%\foreach \x in {5}
-%    \node<\x-> (P-\x) at (1.5 * \x,0) {$f$};
-%\foreach \from/\to in {1/2, 2/3, 3/4, 4/5, 5/6, 6/7}
-%    \draw<\to-> (P-\from) -- (P-\to);
-%\path<8-> (P-3) edge[<->,bend right=60] node[draw=none,label={below:$\mathbf{GF}f$}] {} (P-7);
-%\clip (1.5, -3) rectangle (12, 2);
-%\end{tikzpicture}
-%\end{center}
-%\end{frame}
-
-
-
-
-%\begin{frame}{Infinite-state case}
-%$$
-%\def\descsep{\rule{0pt}{1.4em}}
-%\langle \underset{\text{\color{green!40!black}\descsep variables}}{X}, \underset{\text{\color{blue!50!black}\descsep initial}}{I}, \underset{\text{\color{orange!50!black}\descsep transition}}{T} \rangle
-%$$
-%
-%Example
-%
-%$$
-%\langle {\color{green!40!black}\left\{ x \right\}}, {\color{blue!50!black}\big[x = 0\big]}, {\color{orange!50!black} \big[x' = x\big] \lor \big[x < 10 \land x' = x + 1\big]} \rangle
-%$$
-%
-%Property 1
-%
-%$$
-%    \models \mathbf{G} (x \le 10)
-%$$
-%
-%Property 2
-%
-%$$
-%    \not\models \mathbf{F} (x = 10)
-%$$
-%\end{frame}
-
-
-
-
-\begin{frame}{L2S with Implicit Predicate Abstraction}
-\begin{itemize}
-\item fixed set of abstraction predicates $P$
-\item add propositions $\overline{P}$ to the concrete system
-\item initially guess valuation of predicates $\overline{P}$ (an abstract state)
-\item search for state where $P({\color{green!40!black}X}) = \overline{P}$
-\item search for $f$
-\item search for state where $P({\color{green!40!black}X}) = \overline{P}$
-\item CEGAR
-\begin{itemize}
-\item concretize counterexample using BMC
-\item find infeasible prefix of the infinite path
-\end{itemize}
-\end{itemize}
-\end{frame}
-
-
-
-
-\begin{frame}{L2S with Implicit Abstraction and Well-founded Relations}
-\framesubtitle{Battling limitations of L2S with Implicit Abstraction}
-Limitations
-\begin{itemize}
-\item non-lasso-shaped counterexamples % cannot be concretized
-\item all finite prefixes feasible (diverge/timeout), still infeasible % thats why we need wfr
-\item finite number of predicates not enough to prove safety in general
-\end{itemize}
-Conclusions
-\begin{itemize}
-\item finite unrollings are not enough
-\item analyze infinite unrolling using termination argument
-\end{itemize}
-\end{frame}
-
-
-
-
-\begin{frame}{L2S with Implicit Abstraction and Well-founded Relations}
-\framesubtitle{Counterexamples}
-\begin{center}
+\vskip-1.5cm
+\hskip2cm
 \begin{tikzpicture}[->, >=stealth, every node/.style={circle, draw, minimum size=0.75cm}]
 \node (P-1) at (2, 0) {};
 \node (P-2) at (4, 0) {};
@@ -193,57 +128,15 @@ Conclusions
 \node (P-5) at (6 + 2 * sin 60,  2 * cos 60) {};
 \draw (P-1) -- (P-2);
 \draw (P-2) -- (P-3);
-\draw (P-3) to[bend right=40] node[draw=none,label={[label distance=-0.5ex]240:$x \le 10$}] {} (P-4);
-\draw (P-4) to[bend right=40] node[draw=none,label={right:$f'$}] {} (P-5);
+\draw (P-3) to[bend right=40] node[draw=none,label={[label distance=-0.5ex]240:$x \le n$}] {} (P-4);
+\draw (P-4) to[bend right=40] node[draw=none,label={right:$ $}] {} (P-5) [dashed];
 \draw (P-5) to[bend right=40] node[draw=none,label={[label distance=-0.5ex]120:$x' = x + 1$}] {} (P-3);
 \end{tikzpicture}
 \end{center}
+\vskip-1.5cm
 \begin{itemize}
-\item ranking function $r(x) \stackrel{\text{\tiny def}}{=} 10 - x$
-\item lower bound $0$
-\item well-founded relation $\Phi(X, X') \stackrel{\text{\tiny def}}{=} 0 \le r(x') < r(x)$
-%\item shows infeasibility of infinite unrolling of the loop
-\end{itemize}
-\end{frame}
-
-
-
-
-\begin{frame}{L2S with Implicit Abstraction and Well-founded Relations}
-\framesubtitle{Extending L2S with Implicit Abstraction}
-\begin{itemize}
-\item keep abstract loop detection of L2S
-\item maintain a copy of theory variables $\overline{X}$
-\item parametrised by well-founded relations $\Phi_i$ over ${\color{green!40!black}X}$ and $\overline{X}$
-\end{itemize}
-\vskip1em
-\begin{itemize}
-\item after entering abstract loop
-\item on some occurrence of $f$ (non-det): $\overline{X} \gets {\color{green!40!black}X}$
-\item on all subsequent occurrences of $f$ check $\bigvee \Phi_i({\color{green!40!black}X}, \overline{X})$
-\item loop $\rightarrow$ check never failed
-\end{itemize}
-\end{frame}
-
-
-
-
-\begin{frame}{Abstract Counterexamples}
-\begin{itemize}
-\item concretizing by BMC
-%\begin{itemize}
-%\item try concretizing the exact lasso by searching for model of
-%$$
-%I \land s_0 \land T \land \ldots \land \Big[ s_l^l \land T^l \land \ldots \land s_k^k \Big] \land X_l = X_k
-%$$
-%with $s_i$ being abstract state visited by lasso at time $i$
-%
-%\item bounded model checking
-%\item non-lasso concrete counterexamples will not be recognized % leading to unknown/divergence
-%\end{itemize}
-\item refuting
-\begin{itemize}
-\item some finite prefix of infinite unrolling
+\item concretize by BMC
+\item finite unrollings
 $$
 \begin{array}{l}
 I \land s_0 \land T \land \ldots \Big[ s_l^l \land T^l \land \ldots s_k^k \Big] \\
@@ -251,57 +144,13 @@ I \land s_0 \land T \land \ldots \Big[ s_l^l \land T^l \land \ldots s_k^k \Big] 
 \ldots
 \end{array}
 $$
-\item interpolants refine predicate abstraction
-\item infinite unrolling
+\item termination argument
 \begin{itemize}
-\item apply termination argument: Farkas' lemma
-\item enumerate fixed simple paths through the loop
-\item no disjunctions
-\item ranking function $\rightarrow$ well-founded relation
-\end{itemize}
-\item non-periodic infinite paths are not analyzed
+\item ranking function $r(x) \bydef n - x$
+\item well-founded relation $R(x, x') \bydef 0 \le r(x') < r(x)$
 \end{itemize}
 \end{itemize}
 \end{frame}
-
-
-
-
-%\begin{frame}{Refinement}
-%\begin{itemize}
-%\item interpolants from infeasibility of prefixes
-%\item searching for loops in finer state space
-%\item well-founded relation from termination argument
-%\item from ranking functions $r(X)$ with lower bound $0$
-%\item well-founded by construction
-%$$
-%0 \le r(X) < r(\overline{X})
-%$$
-%\item adding such relation blocks the loop in question
-%\item intuitively, loops are not considered counterexamples as long as they cannot be unrolled indefinitely
-%\end{itemize}
-%\end{frame}
-
-
-
-
-%\begin{frame}{k-liveness}
-%$f$ is visited at most $k$ times, then $\mathbf{FG}\neg f$
-%
-%sequence of checks $k = 1, 2, \ldots$
-%
-%\begin{itemize}
-%\item initialize $counter$ to $0$
-%\item increase $counter$ whenever $f$ becomes satisfied
-%\item keep $counter$ unchanged when $\neg f$ is satisfied
-%\item safety property $counter \le k$
-%%\item for large enough $k$, repeated state closes loop containing $f$
-%%\item alternatively, BMC
-%\end{itemize}
-%\end{frame}
-
-
-
 
 \begin{frame}{k-liveness as special implicit refinement method}
 \begin{itemize}
@@ -320,67 +169,15 @@ for increasing values of $k$
 \end{itemize}
 \end{frame}
 
-
-
-
-%relwork (check reviews for points)
-%\begin{frame}{Related work}
-%The state-of-the-art implementations
-%\begin{itemize}
-%\item Ultimate-LTL
-%\begin{itemize}
-%\item B\"uchi automata
-%\item lasso enumeration and blocking
-%\item programs (control-flow graphs)
-%\end{itemize}
-%\item HSF
-%\begin{itemize}
-%\item Horn-like clauses solver
-%\item search for well-founded transition invariants
-%\end{itemize}
-%\item T2
-%\begin{itemize}
-%\item two flavors: plain termination, CTL*
-%\end{itemize}
-%\end{itemize}
-%\end{frame}
-
-
-
-
-%5mins for expeval (explain how it shows that we rock)
-%\begin{frame}{Evaluation}
-%\begin{itemize}
-%\item we used what we would like to think is a rather extensive set of benchmarks (835)
-%\item extensive set of benchmarks (835)
-%\begin{itemize}
-%\item symbolic transition systems (556)
-%\begin{itemize}
-%\item BIP models, discretized real-time/hybrid systems
-%\end{itemize}
-%\item imperative programs (86)
-%\begin{itemize}
-%\item Ultimate-LTL suite, hand-crafted
-%\item knowledge of CFG
-%\end{itemize}
-%\item termination (193)
-%\begin{itemize}
-%\item T2 suite
-%\end{itemize}
-%\end{itemize}
-%\item we compared with HSF, Ultimate-LTL, T2(-CTL*)
-%\end{itemize}
-%\end{frame}
-
-
-
-
+% execution times, justify timeout, origin of benchmarks
 \def\fst{\cellcolor{orange}}
 \def\snd{}
 \def\trd{}
 \def\for{}
 \def\fif{}
 \begin{frame}{Evaluation} %highlights}
+{}{\small\url{https://es-static.fbk.eu/people/griggio/ic3ia/index.html}} \\
+\vskip1em
 Solved instances out of 835 benchmarks in 20 min per benchmark: \\
 \begin{itemize}
 \item HSF, Ultimate-LTL, T2(-CTL*)
@@ -406,18 +203,36 @@ term.      (193) & \snd 78\% & \trd 76\%    & \for 41\% & \fif 27\% & \fst 99\% 
 \end{center}
 \end{frame}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% BACKUP %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+\appendix
+\setbeamertemplate{footline}
 
+\begin{frame}
+% blank slide
+\end{frame}
 
-\begin{frame}{Conclusion}
-\begin{itemize}
-\item implemented via IC3
-\item compared with state-of-the-art tools
-\begin{center}
-TODO url github page?
-\end{center}
-\item future: enhancements to concretization, refuting even more general loops
-\end{itemize}
+\begin{frame}
+k-liveness gives ranking function,
+does l2sia give a ranking function?
+
+an interesting idea to investigate
+\end{frame}
+
+\begin{frame}
+relation to k-zeno? we do not consider time
+\end{frame}
+
+\begin{frame}
+why termination itself is not enough? l2s for extracting wfr in ts, l2s cheap and often sufficient, \ldots
+\end{frame}
+
+\begin{frame}
+what is new? use of l2s to extract wfr
+\end{frame}
+
+\begin{frame}
+is it fair to give ts to other tools that expect cfg?
 \end{frame}
 
 \end{document}
