--- a/slides.latex
+++ b/slides.latex
@@ -131,17 +131,17 @@ Sergio~Mover\mark{3}
 \begin{frame}{L2S for infinite state systems}
 \begin{itemize}
 \item in context of symbolic transition systems
-\item for which extracting the ranking functions is not obvious
-\item L2S enables us to extract the ranking functions
 \item L2S adds propositions $\overline{P}$ for fixed abstraction predicates $P$
 \item $\overline{P}$ are unconstraint, represent an abstract state
 \item safety property: $f$ visited in a loop starting in $\overline{P}$
+\item incomplete due to spurious abstract cex
 \item CEGAR: concretize using BMC + refute finite unrolling
 \end{itemize}
 \end{frame}
 
 \begin{frame}{L2Sia with well-founded relations}
 \begin{itemize}
+\item L2S to extract ranking from transition systems
 \item $\Phi$ fixed set of well-founded relations
 \item keep abstract loop detection of L2S
 \item $\overline{X}$ copy of theory variables $X$
@@ -150,7 +150,7 @@ Sergio~Mover\mark{3}
 \item safe: disjunctively well-founded transition invariant
 \item here L2S
 \begin{itemize}
-\item provides means to enumerate candidate cex
+\item provides means to enumerate candidate cex % suitable for termination analysis
 \item defers extraction of well-founded relations
 \item mostly cex infeasible due to prefix
 \end{itemize}
